--- a/Dispatchers/Client_Wrapper/client/app.config
+++ b/Dispatchers/Client_Wrapper/client/app.config
@@ -6,11 +6,12 @@
     <section name="FwkWrapper" type="Fwk.ConfigSection.WrapperProviderSection, Fwk.Bases"/>
   </configSections>
   
-  <FwkWrapper defaultProviderName="health_wcf_local">
+  <FwkWrapper defaultProviderName="wrap_wcf_local">
     <Providers>
-      <add name="wrap_wcf_ws2008" type="Fwk.Bases.Connector.WCFWrapper_BasicHttpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp:// 192.168.1.178:8001/FwkService"/>
-      <add name="wrap_clapton" type="Fwk.Bases.Connector.WCFWrapper_BasicHttpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp://192.168.1.189:8001/FwkService"/>
-      <add name="wrap_wcf_local" type="Fwk.Bases.Connector.WCFWrapper_BasicHttpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp://localhost:8001/FwkService"/>
+      <add name="wrap_wcf_local" type="Fwk.Bases.Connector.WCFWrapper_NetTcpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp://localhost:8001/FwkService"/>
+      <add name="wrap_wcf_ws2008" type="Fwk.Bases.Connector.WCFWrapper_NetTcpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp:// 192.168.1.178:8001/FwkService"/>
+      <add name="wrap_clapton" type="Fwk.Bases.Connector.WCFWrapper_NetTcpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp://192.168.1.189:8001/FwkService"/>
+
       <add name="wrap_local" type="Fwk.Bases.Connector.LocalWrapper,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo=""/>
     </Providers>
   </FwkWrapper>
