--- a/Dispatchers/RemotingDispatcher/Remoting.Host/App.config
+++ b/Dispatchers/RemotingDispatcher/Remoting.Host/App.config
@@ -19,7 +19,6 @@
 
   <appSettings>
 
-
     <!--Values (None,Required,Optinal)
     Required :Se auditara la  ejecución del servicio, sin importar la configuracion del mismo.
     Optional Se auditar la  ejecución del servicio si éste está configurado para ser auditado.
@@ -46,10 +45,24 @@
 
     </Providers>
   </FwkLogging>
+
 	<FwkServiceMetadata defaultProviderName="Xml">
 		<Providers>
 			<add name="Xml" type="xml" appid="" sourceinfo="ServiceMetadataConfig.xml" securityProviderName=""/>
 			<add name="Sql" type="sqldatabase" appid="" sourceinfo="BPConfig"/>
 		</Providers>
 	</FwkServiceMetadata>
+  <system.runtime.remoting>
+    <application>
+      <service>
+        <wellknown mode="Singleton"
+            type="Fwk.Remoting.FwkRemoteObject, Fwk.Bases"
+           objectUri="Fwk.Remoting.rem"
+            />
+      </service>
+      <channels>
+        <channel ref="tcp" port="8989" />
+      </channels>
+    </application>
+  </system.runtime.remoting>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
