--- a/Dispatchers/WebServiceDispatcher/Web.Config
+++ b/Dispatchers/WebServiceDispatcher/Web.Config
@@ -1,12 +1,32 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <configSections>
+    <section name="FwkLogging" type="Fwk.ConfigSection.LoggingSection, Fwk.Bases"/>
+    <section name="FwkConfigProvider" type="Fwk.ConfigSection.ConfigProviderSection, Fwk.Bases"/>
     <section name="FwkServiceMetadata" type="Fwk.ConfigSection.ServiceProviderSection, Fwk.Bases"/>
+    <section name="FwkWrapper" type="Fwk.ConfigSection.WrapperProviderSection, Fwk.Bases"/>
+    <sectionGroup name="system.web.extensions" type="System.Web.Configuration.SystemWebExtensionsSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <sectionGroup name="scripting" type="System.Web.Configuration.ScriptingSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+        <section name="scriptResourceHandler" type="System.Web.Configuration.ScriptingScriptResourceHandlerSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+        <sectionGroup name="webServices" type="System.Web.Configuration.ScriptingWebServicesSectionGroup, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+          <section name="jsonSerialization" type="System.Web.Configuration.ScriptingJsonSerializationSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="Everywhere"/>
+          <section name="profileService" type="System.Web.Configuration.ScriptingProfileServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+          <section name="authenticationService" type="System.Web.Configuration.ScriptingAuthenticationServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+          <section name="roleService" type="System.Web.Configuration.ScriptingRoleServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
+        </sectionGroup>
+      </sectionGroup>
+    </sectionGroup>
   </configSections>
-  <FwkServiceMetadata defaultProviderName="met_pelsoft">
+  <connectionStrings>
+    <add name="health" connectionString="Data Source=SANTANA\SQLEXPRESS;Initial Catalog=Health;Persist Security Info=True;User ID=ws;Password=as"
+      providerName="System.Data.SqlClient" />
+    <add name="health_dispatcher" connectionString="Data Source=SANTANA\SQLEXPRESS;Initial Catalog=fwkdata;Persist Security Info=True;User ID=ws;Password=as" providerName="System.Data.SqlClient" />
+
+    
+  </connectionStrings>
+  <FwkServiceMetadata defaultProviderName="health">
     <Providers>
-      <add name="met_pelsoft" type="xml" appid="" sourceinfo="PelsoftMetasvc.xml" securityProviderName=""/>
-      <add name="dispatcher_metadata" type="xml" appid="" sourceinfo="Fwk_Metadata.xml" securityProviderName=""/>
+      <add name="health" type="xml" appid="" sourceinfo="c:\projects\GitHub-sourcetree\fwk_12\Dispatchers\Metasvc.xml" securityProviderName="health_sec"/>
     </Providers>
   </FwkServiceMetadata>
   <FwkConfigProvider defaultProviderName="svc">
@@ -23,6 +43,21 @@
     <!--Nombre del dispatcher como instancia de servicio fisico : puede o no coincidir con ServiceDispatcherName-->
     <add key="HostApplicationName" value="Health soft service"/>
   </appSettings>
+  
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+    
+    <httpProtocol>
+      <customHeaders>
+        <!--<add name="Access-Control-Allow-Origin" value="http://localhost:17854" />-->
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, OPTIONS" />
+        <add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />
+        <add name="Access-Control-Max-Age" value="1728000" />
+
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
 
@@ -39,6 +74,19 @@
       ASP.NET to identify an incoming user. 
     -->
     <authentication mode="Windows"/>
+    <webServices>
+      <protocols>
+        <add name="HttpGet"/>
+        <add name="HttpPost"/>
+      </protocols>
+    </webServices>
+    <httpHandlers>
+      <remove verb="*" path="*.asmx"/>
+      <add verb="*" path="*.asmx" validate="false"
+           type="System.Web.Script.Services.ScriptHandlerFactory,
+          System.Web.Extensions, Version=1.0.61025.0, Culture=neutral,
+          PublicKeyToken=31bf3856ad364e35"/>
+    </httpHandlers>
     <!--
        The <customErrors> section enables configuration 
        of what to do if/when an unhandled error occurs 
@@ -51,16 +99,8 @@
          <error statusCode="404" redirect="FileNotFound.htm" />
        </customErrors>
     -->
-    <roleManager defaultProvider="health_sec" enabled="true" cacheRolesInCookie="true" cookieName=".ASPROLES" cookieTimeout="30" cookiePath="/" cookieRequireSSL="false" cookieSlidingExpiration="true" cookieProtection="All">
-      <providers>
-        <add name="health_sec" type="System.Web.Security.SqlRoleProvider" connectionStringName="health" applicationName="pelsofthealth"/>
-      </providers>
-    </roleManager>
-    <membership defaultProvider="health_sec" userIsOnlineTimeWindow="15">
-      <providers>
-        <add name="health_sec" type="System.Web.Security.SqlMembershipProvider" connectionStringName="hemo_sec" applicationName="pelsofthealth" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" passwordFormat="Hashed" minRequiredPasswordLength="3" minRequiredNonalphanumericCharacters="0"/>
-      </providers>
-    </membership>
+    
+    
     <pages controlRenderingCompatibilityVersion="4.0" clientIDMode="AutoID"/>
   </system.web>
   <!-- 
