--- a/Dispatchers/WcfDispatcher/WcfDispatcherSvc/App.config
+++ b/Dispatchers/WcfDispatcher/WcfDispatcherSvc/App.config
@@ -37,6 +37,11 @@
 
   </connectionStrings>
   <appSettings>
+    <!--Values (None,Required,Optinal)
+    Required :Se auditara la  ejecución del servicio, sin importar la configuracion del mismo.
+    Optional Se auditar la  ejecución del servicio si éste está configurado para ser auditado.
+    None No se auditara la  ejecución del servicio, sin importar la configuracion del mismo.-->
+    <add key="ServiceDispatcherAuditMode" value="Required"/>
     <!--Nombre logico del dispatcher con el que se lo registro  en la bd: Se utiliza solo si hay un registro de instancias en bd-->
     <add key="ServiceDispatcherName" value="Fwk_Disp_Test"/>
     <!--Cadena de coneccion donde se encuentran las configuraciones del dispatcher: Necesario cuando se utiliza ServiceDispatcherName y la info del dispatcher esta en BD-->
