--- a/Dispatchers/WebServiceDispatcher/WebServiceDispatcher.csproj
+++ b/Dispatchers/WebServiceDispatcher/WebServiceDispatcher.csproj
@@ -50,9 +50,6 @@
     <Reference Include="Fwk.Bases">
       <HintPath>..\..\Libraries\Framework\Fwk.Bases.dll</HintPath>
     </Reference>
-    <Reference Include="Fwk.Bases.Connector">
-      <HintPath>..\..\Libraries\Framework\Fwk.Bases.Connector.dll</HintPath>
-    </Reference>
     <Reference Include="Fwk.Security">
       <HintPath>..\..\Libraries\Framework\Fwk.Security.dll</HintPath>
     </Reference>
@@ -78,11 +75,11 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ConfigurationManager_02.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="..\Metasvc.xml">
+      <Link>Metasvc.xml</Link>
+       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Metasvc.xml">
-      <SubType>Designer</SubType>
+    <Content Include="ConfigurationManager_02.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="SingleService.asmx" />
