wrapper for javascript clients

--- a/Dispatchers/WebServiceDispatcher/WebServiceDispatcher.csproj
+++ b/Dispatchers/WebServiceDispatcher/WebServiceDispatcher.csproj
@@ -77,7 +77,7 @@
   <ItemGroup>
     <Content Include="..\Metasvc.xml">
       <Link>Metasvc.xml</Link>
-       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="ConfigurationManager_02.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -102,6 +102,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Client_Wrapper\back\back.csproj">
+      <Project>{7070d9b9-65d3-433e-a504-e9c30952f973}</Project>
+      <Name>back</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
