--- a/Dispatchers/Client_Wrapper/client/app.config
+++ b/Dispatchers/Client_Wrapper/client/app.config
@@ -8,6 +8,9 @@
   
   <FwkWrapper defaultProviderName="wrap_wcf_local">
     <Providers>
+      
+      <add name="wrapper_remoting_1" type="Fwk.Bases.Connector.RemotingWrapper,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="PreProduccion" sourceinfo="remotingPreProduccion.config" />
+      <add name="wrapper_remoting_2" type="Fwk.Bases.Connector.RemotingWrapper,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="Testing" sourceinfo="remotingPreProduccion.config" />
       <add name="wrap_wcf_local" type="Fwk.Bases.Connector.WCFWrapper_NetTcpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp://localhost:8001/FwkService"/>
       <add name="wrap_wcf_ws2008" type="Fwk.Bases.Connector.WCFWrapper_NetTcpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp:// 192.168.1.178:8001/FwkService"/>
       <add name="wrap_clapton" type="Fwk.Bases.Connector.WCFWrapper_NetTcpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp://192.168.1.189:8001/FwkService"/>
