--- a/Dispatchers/Client_Wrapper/client/Client.csproj
+++ b/Dispatchers/Client_Wrapper/client/Client.csproj
@@ -88,6 +88,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crypt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Crypt.Designer.cs">
+      <DependentUpon>Crypt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,9 +107,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="settings.cs" />
+    <Compile Include="UsoHelpersFunctions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UsoHelpersFunctions.Designer.cs">
+      <DependentUpon>UsoHelpersFunctions.cs</DependentUpon>
+    </Compile>
     <Compile Include="WCFWrapper_01.cs" />
     <Compile Include="WCFWrapper_02.cs" />
     <Compile Include="wrap_provider.cs" />
+    <EmbeddedResource Include="Crypt.resx">
+      <DependentUpon>Crypt.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,6 +133,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UsoHelpersFunctions.resx">
+      <DependentUpon>UsoHelpersFunctions.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
@@ -191,6 +210,11 @@
       <Project>{7070d9b9-65d3-433e-a504-e9c30952f973}</Project>
       <Name>back</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="fwkconfigs.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
