--- a/Dispatchers/Client_Wrapper/client/app.config
+++ b/Dispatchers/Client_Wrapper/client/app.config
@@ -2,23 +2,34 @@
 <configuration>
 
 
-  <configSections>
+    <configSections>
     <section name="FwkWrapper" type="Fwk.ConfigSection.WrapperProviderSection, Fwk.Bases"/>
-  </configSections>
+      <section name="FwkServiceMetadata" type="Fwk.ConfigSection.ServiceProviderSection, Fwk.Bases"/>
+    </configSections>
   
-  <FwkWrapper defaultProviderName="wrap_wcf_local">
+  
+  <FwkWrapper defaultProviderName="wrap_local">
     <Providers>
       
       <add name="wrapper_remoting_1" type="Fwk.Bases.Connector.RemotingWrapper,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="PreProduccion" sourceinfo="remotingPreProduccion.config" />
+      
+      
       <add name="wrapper_remoting_2" type="Fwk.Bases.Connector.RemotingWrapper,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="Testing" sourceinfo="remotingPreProduccion.config" />
-      <add name="wrap_wcf_local" type="Fwk.Bases.Connector.WCFWrapper_NetTcpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp://localhost:8001/FwkService"/>
+      <add name="wrap_local" type="Fwk.Bases.Connector.LocalWrapper,Fwk.Bases.Connector" 
+           appId="pelsoft" serviceMetadataProviderName="Testing" sourceinfo=""/>
       <add name="wrap_wcf_ws2008" type="Fwk.Bases.Connector.WCFWrapper_NetTcpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp:// 192.168.1.178:8001/FwkService"/>
       <add name="wrap_clapton" type="Fwk.Bases.Connector.WCFWrapper_NetTcpBinding,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo="net.tcp://192.168.1.189:8001/FwkService"/>
 
       <add name="wrap_local" type="Fwk.Bases.Connector.LocalWrapper,Fwk.Bases.Connector" appId="pelsoft" serviceMetadataProviderName="health" sourceinfo=""/>
     </Providers>
   </FwkWrapper>
-  
+  <FwkServiceMetadata defaultProviderName="PreProduccion">
+    <Providers>
+      <add name="PreProduccion" type="xml" appid="" sourceinfo="Metasvc.xml" securityProviderName=""/>
+      <add name="Testing" type="xml" appid="" sourceinfo="Metasvc.xml" securityProviderName=""/>
+
+    </Providers>
+  </FwkServiceMetadata>
     <!--<system.serviceModel>
 
 
@@ -42,4 +53,8 @@
         <endpoint address="http://localhost:8732/WcfDispatcher/FwkService/mex" binding="wsHttpBinding" bindingConfiguration="web" contract="ServiceReference1.IFwkService" name="web"/>
       </client>
     </system.serviceModel>-->
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
+
+
+
+</configuration>
