--- a/Dispatchers/RemotingDispatcher/Fwk.Remoting.Listener/App.config
+++ b/Dispatchers/RemotingDispatcher/Fwk.Remoting.Listener/App.config
@@ -13,8 +13,10 @@
   </configSections>
 	
   <connectionStrings>
-    <add name="BPConfig" connectionString="Initial Catalog = DataBase;Data Source=hosr;User ID= sa ;Password= as.." providerName="System.Data.SqlClient"/>
-	  <add name="BlockingModel" connectionString="Data Source=S1DESARROLLO22\SQLEXPRESS;Initial Catalog=FwkBlocking;Persist Security Info=True;User ID=sa;Password=as" providerName="System.Data.SqlClient"/>
+    
+    <add name="fwk_dispatcher" connectionString="Data Source=santana\SQLEXPRESS2008;Initial Catalog=fwktest1;Persist Security Info=True;User ID=sa;Password=as" providerName="System.Data.SqlClient"/>
+    
+    <add name="BlockingModel" connectionString="Data Source=S1DESARROLLO22\SQLEXPRESS;Initial Catalog=FwkBlocking;Persist Security Info=True;User ID=sa;Password=as" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
   <appSettings>
