--- a/Dispatchers/RemotingDispatcher/Fwk.Remoting.Listener/RemotingHost.config
+++ b/Dispatchers/RemotingDispatcher/Fwk.Remoting.Listener/RemotingHost.config
@@ -4,9 +4,7 @@
     <application>
       <service>
         <wellknown mode="Singleton"
-           type="Fwk.Remoting.RemoteTypes.RemoteObject, Fwk.Remoting.RemoteTypes"
-           objectUri="Fwk.Remoting.RemoteTypes.rem"
-            />
+           type="Fwk.Remoting.FwkRemoteObject, Fwk.Bases.dll"    objectUri="Fwk.Remoting.rem" />
       </service>
       <channels>
         <channel ref="tcp" port="8989" />
