--- a/Fwk/Test/Fwk.Loggin.Test/App.config
+++ b/Fwk/Test/Fwk.Loggin.Test/App.config
@@ -1,19 +1,34 @@
 <?xml version="1.0"?>
 <configuration>
 	<configSections>
-		<section name="FwkLogging" type="Fwk.ConfigSection.LoggingSection, Fwk.Bases"/>
+    <section name="FwkLogging" type="Fwk.ConfigSection.LoggingSection, Fwk.Bases"/>
+    <section name="FwkConfigProvider" type="Fwk.ConfigSection.ConfigProviderSection, Fwk.Bases"/>
+    <section name="FwkServiceMetadata" type="Fwk.ConfigSection.ServiceProviderSection, Fwk.Bases"/>
  		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral">
 
 		</sectionGroup>
   
 	</configSections>
-  
 
-	<connectionStrings>
-    
-    <add name="LogsDB" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=logs;Persist Security Info=True;User ID=sa;Password=as" providerName="System.Data.SqlClient"/>
-    <add name="LogsDB2" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS; Initial Catalog=fwktest;Integrated Security=True"/>
-	</connectionStrings>
+
+  <appSettings>
+
+    <!--Values (None,Required,Optinal)
+    Required :Se auditara la  ejecución del servicio, sin importar la configuracion del mismo.
+    Optional Se auditar la  ejecución del servicio si éste está configurado para ser auditado.
+    None No se auditara la  ejecución del servicio, sin importar la configuracion del mismo.-->
+    <add key="ServiceDispatcherAuditMode" value="Required"/>
+    <!--Nombre logico del dispatcher con el que se lo registro  en la bd: Se utiliza solo si hay un registro de instancias en bd-->
+    <add key="ServiceDispatcherName" value="Fwk_Disp_Test"/>
+    <!--Cadena de coneccion donde se encuentran las configuraciones del dispatcher: Necesario cuando se utiliza ServiceDispatcherName y la info del dispatcher esta en BD-->
+    <add key="ServiceDispatcherConnection" value="fwk_dispatcher"/>
+    <!--Nombre del dispatcher como instancia de servicio fisico : puede o no coincidir con ServiceDispatcherName-->
+    <add key="HostApplicationName" value="Health soft service"/>
+  </appSettings>
+  <connectionStrings>
+    <add name="HealthEntities" connectionString="metadata=res://*/Health.csdl|res://*/Health.ssdl|res://*/Health.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=clapton\SQLEXPRESS2008;initial catalog=Health;persist security info=True;user id=ws;password=as;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="fwk_dispatcher" connectionString="Data Source=santana\SQLEXPRESS2008;Initial Catalog=fwktest1;Persist Security Info=True;User ID=sa;Password=as" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 
   <FwkLogging defaultProviderName="">
     <Providers>
