--- a/Dispatchers/RemotingDispatcher/Remoting.Host/App.config
+++ b/Dispatchers/RemotingDispatcher/Remoting.Host/App.config
@@ -13,7 +13,8 @@
   </configSections>
 	
   <connectionStrings>
-    <add name="BPConfig" connectionString="Initial Catalog = DataBase;Data Source=hosr;User ID= sa ;Password= as.." providerName="System.Data.SqlClient"/>
+    <add name="fwk_dispatcher" connectionString="Data Source=santana\SQLEXPRESS2008;Initial Catalog=fwktest1;Persist Security Info=True;User ID=sa;Password=as" providerName="System.Data.SqlClient"/>
+    
 	  <add name="BlockingModel" connectionString="Data Source=S1DESARROLLO22\SQLEXPRESS;Initial Catalog=FwkBlocking;Persist Security Info=True;User ID=sa;Password=as" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
@@ -46,9 +47,9 @@
     </Providers>
   </FwkLogging>
 
-	<FwkServiceMetadata defaultProviderName="Xml">
+	<FwkServiceMetadata defaultProviderName="xml">
 		<Providers>
-			<add name="Xml" type="xml" appid="" sourceinfo="ServiceMetadataConfig.xml" securityProviderName=""/>
+			<add name="xml" type="xml" appid="" sourceinfo="Metasvc.xml" securityProviderName=""/>
 			<add name="Sql" type="sqldatabase" appid="" sourceinfo="BPConfig"/>
 		</Providers>
 	</FwkServiceMetadata>
