--- a/Fwk/Fwk.Bases/Properties/Settings.settings
+++ b/Fwk/Fwk.Bases/Properties/Settings.settings
@@ -42,5 +42,21 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=CLAPTON\SQLEXPRESS;Initial Catalog=fwkdata;User ID=sa</Value>
     </Setting>
+    <Setting Name="fwktest1ConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=SANTANA\SQLEXPRESS2008;Initial Catalog=fwktest1;User ID=sa&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=SANTANA\SQLEXPRESS2008;Initial Catalog=fwktest1;User ID=sa</Value>
+    </Setting>
+    <Setting Name="fwktest1ConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=SANTANA\SQLEXPRESS2008;Initial Catalog=fwktest1;User ID=sa;Password=as&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=SANTANA\SQLEXPRESS2008;Initial Catalog=fwktest1;User ID=sa;Password=as</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
