Se agrega nuevamente FwkZip . mejoras en Auditoria de servicio.- Se controla         static void DoAudit(ServiceConfiguration pServiceConfiguration, IServiceContract pRequest, IServiceContract wResponse)

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,5 @@ Dispatchers/WcfDispatcher/.vs/WcfDispatcher/v14/.suo
 Dispatchers/WcfDispatcher/WcfDispatcher/WcfDispatcher.csproj.user
 Fwk.FrontEnd/Fwk.FrontEnd.v11.suo
 Libraries/Framework/Fwk.Bases.FrontEnd.dll.config
+Fwk/Fwk.Bases/Blocks/Fwk.BusinessFacades/FacadeHelper.cs.bak
+Libraries/Framework/Fwk.Security.dll
