--- a/Fwk/Fwk.Bases/Fwk.Bases.csproj
+++ b/Fwk/Fwk.Bases/Fwk.Bases.csproj
@@ -114,6 +114,7 @@
     <Compile Include="..\..\ProductConfiguration\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Blocks\Functions\FwkZip.cs" />
     <Compile Include="Blocks\Functions\WindowsFunction.cs" />
     <Compile Include="Blocks\Fwk.Blocking\svc\ClearBlockingMarksISVC.cs" />
     <Compile Include="Blocks\Fwk.Blocking\svc\ClearBlockingMarksrService.cs" />
