--- a/.gitignore
+++ b/.gitignore
@@ -199,3 +199,4 @@ Fwk.FrontEnd/Fwk.FrontEnd.v11.suo
 Libraries/Framework/Fwk.Bases.FrontEnd.dll.config
 Fwk/Fwk.Bases/Blocks/Fwk.BusinessFacades/FacadeHelper.cs.bak
 Libraries/Framework/Fwk.Security.dll
+Fwk/Fwk.Bases.Connector/WCF/WCFWrapper_NetTcpBinding.cs.bak
