--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,5 @@ Libraries/Framework/Fwk.Security.dll
 Fwk/Fwk.Bases.Connector/WCF/WCFWrapper_NetTcpBinding.cs.bak
 Libraries/Framework/Fwk.Bases.Connector.xml
 Libraries/Framework/Fwk.Security.Service.Test.dll
+Dispatchers/WcfDispatcher/WcfDispatcher/WcfDispatcher.Service.csproj.user
+Fwk/.vs/Fwk/v14/.suo
