--- a/Dispatchers/WcfDispatcher/WcfDispatcher_Host/App.config
+++ b/Dispatchers/WcfDispatcher/WcfDispatcher_Host/App.config
@@ -10,10 +10,13 @@
 
   <appSettings>
       <!--Values (None,Required,Optinal)
-    Required :Se auditara la  ejecución del servicio, sin importar la configuracion del mismo.
-    Optional Se auditar la  ejecución del servicio si éste está configurado para ser auditado.
+    Required_ExecutionsAndErrors: Se auditará la  ejecución con errores del servicio, sin importar la configuración individual del mismo en la Metadata.
+    Required_ErrorsOnly :Se auditará la  ejecución del servicio si éste está configurado para ser auditado en la metadata. 
+                        Loguea Errores y ejecucion sin errores
+    Optional_ExecutionsAndErrors Loguea solo errores de un servicio solo si esta configurado en la Metadata
+    Optional_ErrorsOnly No se auditará la  ejecución del servicio ni errrores.-
     None No se auditara la  ejecución del servicio, sin importar la configuracion del mismo.-->
-    <add key="ServiceDispatcherAuditMode" value="Required"/>
+    <add key="ServiceDispatcherAuditMode" value="Required_ExecutionsAndErrors"/>
     <!--Nombre logico del dispatcher con el que se lo registro  en la bd: Se utiliza solo si hay un registro de instancias en bd-->
     <add key="ServiceDispatcherName" value="Fwk_Disp_Test"/>
     <!--Cadena de coneccion donde se encuentran las configuraciones del dispatcher: Necesario cuando se utiliza ServiceDispatcherName y la info del dispatcher esta en BD-->
@@ -22,12 +25,13 @@
     <add key="HostApplicationName" value="Health soft service"/>
   </appSettings>
   <connectionStrings>
-    <add name="fwk_dispatcher" connectionString="Data Source=clapton\SQLEXPRESS2008;Initial Catalog=fwktest1;Persist Security Info=True;User ID=ws;Password=as" providerName="System.Data.SqlClient"/>
+    <add name="fwk_dispatcher" connectionString="Data Source=SANTANA\SQLEXPRESS2008;
+         Initial Catalog=fwktest1;Persist Security Info=True;User ID=sa;Password=as" providerName="System.Data.SqlClient"/>
 
   </connectionStrings>
   <FwkServiceMetadata defaultProviderName="health">
     <Providers>
-      <add name="health" type="xml" appid="" sourceinfo="C:\projects\GitHub-sourcetree\fwk_12\Dispatchers\WcfDispatcher\WcfDispatcher_Host\Metasvc.xml" securityProviderName="health_sec"/>
+      <add name="health" type="xml" appid="" sourceinfo="Metasvc.xml" securityProviderName="health_sec"/>
     </Providers>
   </FwkServiceMetadata>
 
@@ -36,13 +40,16 @@
       <service behaviorConfiguration="MEXGET" name="WcfDispatcher.Service.FwkService">
         
         <endpoint binding="netTcpBinding" bindingConfiguration="TransactionalTCP" name="tcp" contract="WcfDispatcher.Service.IFwkService"/>
+        
+        <endpoint address="mex" binding="mexHttpBinding" name="web" contract="WcfDispatcher.Service.IFwkService"/>
         <host>
           <baseAddresses>
             <add baseAddress="net.tcp://localhost:8001/FwkService"/>
+            <add baseAddress="http://localhost:8732/WcfDispatcher/FwkService/"/>
           </baseAddresses>
         </host>
       </service>
-
+      
     </services>
     <behaviors>
       <serviceBehaviors>
