--- a/Fwk/Test/Fwk.Bases.Test/Fwk.Bases.Test.csproj
+++ b/Fwk/Test/Fwk.Bases.Test/Fwk.Bases.Test.csproj
@@ -114,6 +114,12 @@
     <Compile Include="frmEntityFromXmlWhitAttributes.Designer.cs">
       <DependentUpon>frmEntityFromXmlWhitAttributes.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmException.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmException.Designer.cs">
+      <DependentUpon>frmException.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmFormatFunction.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,12 +131,6 @@
     </Compile>
     <Compile Include="frmFwkZip.Designer.cs">
       <DependentUpon>frmFwkZip.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmException.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmException.Designer.cs">
-      <DependentUpon>frmException.cs</DependentUpon>
     </Compile>
     <Compile Include="frmHelperFunctions.cs">
       <SubType>Form</SubType>
@@ -170,14 +170,14 @@
       <DependentUpon>frmEntityFromXmlWhitAttributes.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmException.resx">
+      <DependentUpon>frmException.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmFormatFunction.resx">
       <DependentUpon>frmFormatFunction.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmFwkZip.resx">
       <DependentUpon>frmFwkZip.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmException.resx">
-      <DependentUpon>frmException.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmHelperFunctions.resx">
       <DependentUpon>frmHelperFunctions.cs</DependentUpon>
@@ -282,7 +282,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="GetColaboratorDataByParamsResponse.xml" />
-    <Content Include="TextFile1.txt" />
+    <Content Include="TextFile1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="XmlWhitAttributes.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
