--- a/Fwk/Fwk.Bases/app.config
+++ b/Fwk/Fwk.Bases/app.config
@@ -24,5 +24,8 @@
         <add name="Fwk.Bases.Properties.Settings.fwktest1ConnectionString1"
             connectionString="Data Source=SANTANA\SQLEXPRESS2008;Initial Catalog=fwktest1;User ID=sa;Password=as"
             providerName="System.Data.SqlClient" />
+        <add name="Fwk.Bases.Properties.Settings.Epiron3GMultilenguajeGestionConnectionString"
+            connectionString="Data Source=AAVMBD03\SQL2008DESA;Initial Catalog=Epiron3GMultilenguajeGestion;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
