Password Hashing SALT + HAS RSA

--- a/Fwk/Test/Fwk.Security.Cryptography.Test/Fwk.Security.Cryptography.Test.csproj
+++ b/Fwk/Test/Fwk.Security.Cryptography.Test/Fwk.Security.Cryptography.Test.csproj
@@ -61,6 +61,12 @@
     <Compile Include="FormTest.Designer.cs">
       <DependentUpon>FormTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmPasswordSaltHashing.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPasswordSaltHashing.Designer.cs">
+      <DependentUpon>frmPasswordSaltHashing.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -68,6 +74,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormTest.resx">
       <DependentUpon>FormTest.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPasswordSaltHashing.resx">
+      <DependentUpon>frmPasswordSaltHashing.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
