paso de cambios from konect

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,9 @@ Libraries/Framework/Fwk.Bases.dll
 Libraries/Framework/Fwk.Bases.Connector.dll
 Libraries/Framework/Fwk.Bases.Connector.XmlSerializers.dll
 Libraries/Framework/Fwk.Bases.FrontEnd.dll
+Libraries/Framework/Fwk.Bases.XML nul
+Dispatchers/RemotingDispatcher/.vs/RemotingDispatcher/v15/Server/sqlite3/storage.ide
+Dispatchers/RemotingDispatcher/.vs/RemotingDispatcher/v15/Server/sqlite3/db.lock
+Libraries/Framework/Fwk.Bases.pdb nul
+Libraries/Framework/Fwk.Bases.dll.config nul
+Libraries/Framework/Fwk.Bases.dll nul
