--- a/Fwk/Fwk.Bases/Fwk.Bases.csproj
+++ b/Fwk/Fwk.Bases/Fwk.Bases.csproj
@@ -377,6 +377,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)$(TargetName).*"  "$(ProjectDir)..\..\Libraries\Framework\$(TargetName).*" &gt;&gt; nul</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetDir)$(TargetName).*"  "$(ProjectDir)..\..\Libraries\Framework\$(TargetName).* nul</PostBuildEvent>
   </PropertyGroup>
 </Project>
