cliening porcessConnectionEx and TechnicalEx new methods to helper fucntions (epoch) , datetime. typefunctions

--- a/Fwk/Fwk.Bases/Fwk.Bases.csproj
+++ b/Fwk/Fwk.Bases/Fwk.Bases.csproj
@@ -371,6 +371,6 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)$(TargetName).*"  "$(ProjectDir)..\..\Libraries\Framework\$(TargetName).* nul</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetDir)$(TargetName).*"  "$(ProjectDir)..\..\Libraries\Framework\$(TargetName).*"</PostBuildEvent>
   </PropertyGroup>
 </Project>
